feat: category and item endpoints
