# src/routes/itemRoutes.ts
@@ -1,8 +1,14 @@
 import express from "express";
-import { getAllItems } from "../controllers/itemController";
+import {
+  createItem,
+  deleteItem,
+  getAllItems,
+} from "../controllers/itemController";
 
 const router = express.Router();
 
 router.get("/items", getAllItems);
+router.post("/items", createItem);
+router.delete("/items/:id", deleteItem);
 
 export default router;
